--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="corpo">
+        <h1>Calcule a quantidade de carne, cerveja e refrigerante para o seu churrasco!</h1>
+
+
+
+    </div>
     <div class="container">
         <h1>Churrascômetro</h1>
         <input id="adultos" type="number" placeholder="Adultos">
