--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 
     <div class="corpo">
         <h1>Calcule a quantidade de carne, cerveja e refrigerante para o seu churrasco!</h1>
-
-
-
+        <img src="imagens/churrasco-removebg-preview.png" alt="" srcset="">
     </div>
     <div class="container">
         <h1>Churrascômetro</h1>
         <input id="adultos" type="number" placeholder="Adultos">
         <input id="criancas" type="number" placeholder="Crianças">
-        <input id="duracao" type="number" placeholder="Duração">
+        <input id="duracao" type="number" placeholder="Duração(h)">
         <button onclick="calcular()">Calcular</button>
 
         <div id="resultado">
