--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Churrascômetro</title>
+    <title>CHURRASCÔMETRO</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
@@ -14,11 +15,11 @@
         <img src="imagens/churrasco-removebg-preview.png" alt="" srcset="">
     </div>
     <div class="container">
-        <h1>Churrascômetro</h1>
+        <h1 id="titulo">CHURRASCÔMETRO</h1>
         <input id="adultos" type="number" placeholder="Adultos">
         <input id="criancas" type="number" placeholder="Crianças">
         <input id="duracao" type="number" placeholder="Duração(h)">
-        <button onclick="calcular()">Calcular</button>
+        <button onclick="calcular()">CALCULAR</button>
 
         <div id="resultado">
 
